# polityzer

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets_2020/: datasets_2020.md
polityzer_tool/: config.py  form_extractor.py  link_extractor.py  polityzer.py  privacy_policy_analyzer.py  utils.py  website_downloader.py
polityzer_tool/chromedriver/installer/: __init__.py  utils.py
polityzer_tool/database/: candidate_office_website.csv
tests/: test_polityzer_tool.py
